--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>AURORA9: The Autonomous AI Workforce for E-commerce Growth - Join Waiting List</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L74WDBC4F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8L74WDBC4F');
+</script>  
+        <style>
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f8fafc; /* Light gray background */
