--- a/index.html
+++ b/index.html
@@ -1069,6 +1069,7 @@
             </p>
             <ul class="list-disc list-inside text-lg space-y-2 ml-4">
                 <li><b>Autonomous Mode</b> – AI agents independently strategize and execute without requiring human approval.</li>
+                <li><b>Semi-autonomous Mode</b> -AI assists with intelligent suggestions and automated execution, keeping you in control with oversight.</li>
                 <li><b>Progressive Mode</b> – AI agents suggest data-backed decisions and wait for user approval before executing
                     actions.</li>
             </ul>
