--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
                 to autonomously implement and scale growth strategies.
             </p>
             <p class="text-lg mt-4">
-                Aurora9 offers two modes of operation to meet different business needs:
+                Aurora9 offers three modes of operation to meet different business needs:
             </p>
             <ul class="list-disc list-inside text-lg space-y-2 ml-4">
                 <li><b>Autonomous Mode</b> – AI agents independently strategize and execute without requiring human approval.</li>
